force-app/main/default/objects/Zone__c/Zone__c.object-meta.xml
<CustomObject>
    <label>Zone</label>
    <nameField>
        <label>Zone Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>