force-app/main/default/objects/Zone__c/fields/Center_Lat__c.field-meta.xml
<CustomField>
    <fullName>Center_Lat__c</fullName>
    <label>Center_Lat</label>
    <precision>15</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>