force-app/main/default/objects/Zone__c/fields/Center_Long__c.field-meta.xml
<CustomField>
    <fullName>Center_Long__c</fullName>
    <description>Longitude of the zone center.</description>
    <label>Center_Long</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>