force-app/main/default/objects/Zone__c/fields/Radius_m__c.field-meta.xml
<CustomField>
    <fullName>Radius_m__c</fullName>
    <description>Radius of the zone in meters (defines coverage area).</description>
    <label>Radius_m</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>