force-app/main/default/objects/Zone__c/fields/Ward__c.field-meta.xml
<CustomField>
    <fullName>Ward__c</fullName>
    <description>Ward or sub-area name.</description>
    <label>Ward</label>
    <length>80</length>
    <type>Text</type>
</CustomField>