force-app/main/default/objects/Zone__c/validationRules/Validate_ZoneCoordinates.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_ZoneCoordinates</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   Center_Lat__c  &lt; -90,  Center_Lat__c  &gt; 90,
   Center_Long__c  &lt; -180,  Center_Long__c  &gt; 180
)</errorConditionFormula>
    <errorDisplayField>Center_Lat__c</errorDisplayField>
    <errorMessage>Center Latitude/Longitude must be valid geographic coordinates.</errorMessage>
</ValidationRule>